--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -79,7 +79,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 2;
+  z-index: 5;
 
   position: sticky;
   top: 0;
@@ -117,16 +117,11 @@ header {
 
 /* MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN */
 
-// section {
-//   padding: 2rem;
-// }
-
 main {
   position: sticky;
   top: 0;
   display: flex;
   flex-direction: column;
-  // gap: 1rem;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -257,11 +252,22 @@ p {
     max-width: 100vw;
   }
 }
-@media all and (max-width: 376px) {
+@media all and (max-width: 391px) {
   :root {
     --base-font-size: 1rem;
   }
 
+  main,
+  .blog__cards {
+    top: 0;
+    position: relative;
+  }
+  
+  .blog__top {
+    flex-direction: column;
+    // position: relative;
+    top: -12rem;
+  }
   .landing__top {
     top: -37rem;
   }
@@ -269,7 +275,7 @@ p {
   .landing__second {
     top: 6rem;
   }
-  .michel {
-    top: 7.5rem;
+  footer {
+    top: 0;
   }
 }
