--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -531,10 +531,6 @@ nav.side li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-align: right;
@@ -598,82 +594,6 @@ nav.side li {
 :root {
   /* Positioning of list background images */
   --bg-pos: left / contain no-repeat;
-}
-
-/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
-.michel {
-  padding: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 100%;
-  min-height: 89vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 8.5rem;
-  z-index: -1;
-  background-image: url("../../public/images/michel.jpg");
-  background-size: cover;
-}
-
-.michel h2 {
-  color: var(--color-white);
-  text-align: left;
-  max-width: 30rem;
-}
-
-.michel2,
-.michel3 {
-  border-top: 1rem solid var(--color-dark);
-  padding: 2rem;
-  min-height: 89vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 6rem;
-  z-index: 2;
-  background-image: url("../../public/images/michel2.jpg");
-  background-size: cover;
-}
-
-.michel2 h2,
-.michel3 h2 {
-  color: var(--color-white);
-  text-align: left;
-  max-width: 30rem;
-}
-
-.michel3 {
-  border-top: 1rem solid var(--color-dark);
-  min-height: 69vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 6rem;
-  z-index: 2;
-  background-image: url("../../public/images/michel3.jpg");
-  background-size: cover;
-  background-position: center top;
-}
-
-.michel4 {
-  border-top: 1rem solid var(--color-dark);
-  min-height: 89vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 6rem;
-  z-index: 2;
-  background-image: url("../../public/images/michel4.jpg");
-  background-size: cover;
-  background-position: center center;
 }
 
 /* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
@@ -1226,71 +1146,142 @@ button.dark-mode-button:active {
   background-color: var(--color-yellow);
 }
 
-/* BANNER */
-svg {
-  /* height: calc(100vh - 8rem); */
-  width: 120vw;
-  position: absolute;
-  top: 0;
-  overflow: visible;
-  z-index: -1;
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  --anime: 5s;
+/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
+.card {
+  -webkit-transition: 5s;
+  transition: 5s;
 }
 
-.slink-svg-1 {
-  -webkit-animation: slink calc(var(--anime) * 1.618) infinite alternate;
-          animation: slink calc(var(--anime) * 1.618) infinite alternate;
+.card:hover {
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
 }
 
-.slink-svg-2 {
-  animation: slink calc(var(--anime) * 1.2) infinite alternate-reverse;
+.card:hover h6 {
+  background-color: var(--color-white);
+  -webkit-box-shadow: -0.3rem 0.4rem 0.01rem rgba(0, 0, 0, 0.15);
+          box-shadow: -0.3rem 0.4rem 0.01rem rgba(0, 0, 0, 0.15);
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
 }
 
-.slink-svg-3 {
-  -webkit-animation: slink calc(var(--anime) * 3) infinite alternate;
-          animation: slink calc(var(--anime) * 3) infinite alternate;
+.tech-icon {
+  width: 2.5rem;
+  margin-right: 1rem;
 }
 
-.slink-svg-4 {
-  animation: slink calc(var(--anime) * 2.525) infinite alternate-reverse;
+.tech-icon:last-child {
+  margin-right: 0;
 }
 
-.slink-svg-5 {
-  -webkit-animation: slink calc(var(--anime) * 1.7) infinite alternate;
-          animation: slink calc(var(--anime) * 1.7) infinite alternate;
+.photo-1 {
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 8.3rem;
+  background-image: url("../../public/images/michel.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
-.slink-svg-6 {
-  animation: slink calc(var(--anime) * 2.3) infinite alternate-reverse;
+.photo-1 h2 {
+  color: var(--color-white);
+  text-align: left;
+  max-width: 30rem;
 }
 
-@-webkit-keyframes slink {
-  0% {
-    -webkit-transform: translateX(5%);
-            transform: translateX(5%);
+.photo-2 {
+  border-top: 1rem solid var(--color-dark);
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 6rem;
+  z-index: 2;
+  background-size: cover;
+  background-image: url("../../public/images/michel2.jpg");
+}
+
+.photo-3 {
+  border-top: 1rem solid var(--color-dark);
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 6rem;
+  z-index: 2;
+  background-size: cover;
+  background-image: url("../../public/images/michel3.jpg");
+  background-position: center top;
+}
+
+.photo-4 {
+  border-top: 1rem solid var(--color-dark);
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 6rem;
+  z-index: 2;
+  background-size: cover;
+  background-image: url("../../public/images/michel4.jpg");
+  background-position: center center;
+}
+
+/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
+@media screen and (max-width: 64rem) {
+  .landing__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    top: -21rem;
   }
-  50% {
-    fill: var(--color-blood);
-  }
-  100% {
-    -webkit-transform: translateX(-5%) translateY(10%);
-            transform: translateX(-5%) translateY(10%);
+  .streaming__banner {
+    max-width: 100vw;
   }
 }
 
-@keyframes slink {
-  0% {
-    -webkit-transform: translateX(5%);
-            transform: translateX(5%);
+@media all and (max-width: 391px) {
+  :root {
+    --base-font-size: 1rem;
   }
-  50% {
-    fill: var(--color-blood);
+  main,
+  .blog__cards {
+    top: 0;
+    position: relative;
   }
-  100% {
-    -webkit-transform: translateX(-5%) translateY(10%);
-            transform: translateX(-5%) translateY(10%);
+  .blog__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    top: -12rem;
+  }
+  .landing__top {
+    top: -37rem;
+  }
+  .landing__second {
+    top: 6rem;
+  }
+  footer {
+    top: 0;
   }
 }
 
@@ -1352,7 +1343,6 @@ body {
   min-height: 100vh;
   width: 100vw;
   scrollbar-gutter: stable;
-  top: 0;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
@@ -1367,7 +1357,7 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 5;
+  z-index: 10;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -1394,15 +1384,8 @@ header ul li a:focus, header ul li a:hover {
   text-decoration: none;
 }
 
-header ul li a.streaming-link {
-  opacity: 0;
-}
-
 /* MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN */
 main {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1420,8 +1403,6 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
-  top: 7rem;
   background-color: var(--color-dark);
   font-size: var(--h5);
   -webkit-transition: border-radius var(--speed-slow);
@@ -1430,31 +1411,36 @@ footer {
 
 footer a,
 footer a:visited {
-  padding: 2rem 2rem;
+  padding: 2rem;
+  width: 100%;
   color: var(--color-grey);
   text-decoration: none;
 }
 
 /* ELEMENTS ELEMENTS ELEMENTS ELEMENTS ELEMENTS ELEMENTS ELEMENTS ELEMENTS */
-a {
+a,
+a:visited {
   color: var(--color-dark);
   text-decoration: underline;
   -webkit-transition: color var(--speed-fast);
   transition: color var(--speed-fast);
 }
 
-a:focus, a:hover {
+a:focus, a:hover,
+a:visited:focus,
+a:visited:hover {
   color: var(--color-blood);
   text-decoration: none;
 }
 
 button {
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
   cursor: pointer;
 }
 
 details {
   cursor: pointer;
+  padding: 1rem 0;
 }
 
 details p,
@@ -1507,87 +1493,5 @@ p {
 
 p:first-child {
   margin-top: 0;
-}
-
-/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
-.card {
-  -webkit-transition: 5s;
-  transition: 5s;
-}
-
-.card:hover {
-  border-radius: 1rem;
-  -webkit-transition: var(--speed-fast);
-  transition: var(--speed-fast);
-}
-
-.card:hover h6 {
-  background-color: var(--color-white);
-  -webkit-box-shadow: -0.3rem 0.4rem 0.01rem rgba(0, 0, 0, 0.15);
-          box-shadow: -0.3rem 0.4rem 0.01rem rgba(0, 0, 0, 0.15);
-  -webkit-transition: var(--speed-fast);
-  transition: var(--speed-fast);
-}
-
-.card:hover.how-to blockquote {
-  border-radius: 1rem;
-  -webkit-transition: var(--speed-fast);
-  transition: var(--speed-fast);
-}
-
-.icon {
-  width: 3rem;
-  margin-right: 1rem;
-}
-
-.hover {
-  border-radius: 1rem;
-  -webkit-transition: border-radius var(--speed-fast) ease-out;
-  transition: border-radius var(--speed-fast) ease-out;
-}
-
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (max-width: 64rem) {
-  .landing__top {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 100%;
-    top: -21rem;
-  }
-  .streaming__banner {
-    max-width: 100vw;
-  }
-}
-
-@media all and (max-width: 391px) {
-  :root {
-    --base-font-size: 1rem;
-  }
-  main,
-  .blog__cards {
-    top: 0;
-    position: relative;
-  }
-  .blog__top {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    top: -12rem;
-  }
-  .landing__top {
-    top: -37rem;
-  }
-  .landing__second {
-    top: 6rem;
-  }
-  footer {
-    top: 0;
-  }
 }
 /*# sourceMappingURL=style.css.map */
