--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,14 +1,15 @@
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-
-
 @media screen and (max-width: 64rem) {
-  .landing__top {
+  .top {
     display: flex;
     flex-direction: column;
     width: 100%;
     top: -21rem;
   }
 
+  .blog__top {
+    flex-direction: column;
+    top: -12rem;
+  }
   .streaming__banner {
     max-width: 100vw;
   }
@@ -16,7 +17,7 @@
 
 @media all and (max-width: 391px) {
   :root {
-    --base-font-size: 1rem;
+    --base-font-size: 8rem;
   }
 
   main,
@@ -25,21 +26,11 @@
     position: relative;
   }
 
-  .blog__top {
-    flex-direction: column;
-    // position: relative;
-    top: -12rem;
-  }
-
-  .landing__top {
+  .top {
     top: -37rem;
   }
 
-  .landing__second {
+  .main-2 {
     top: 6rem;
-  }
-
-  footer {
-    top: 0;
   }
 }
