--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -342,29 +342,7 @@ template {
   display: none;
 }
 
-nav.side {
-  height: 92vh;
-  width: 30rem;
-  border: 1rem solid var(--color-dark);
-  padding: 1rem;
-  position: absolute;
-  top: 7.5rem;
-  right: 0;
-  background-color: var(--color-white);
-  color: var(--color-dark);
-  font-size: var(--h6);
-  z-index: 3;
-  -webkit-transition: var(--speed-slow) ease-in-out;
-  transition: var(--speed-slow) ease-in-out;
-  -webkit-transform: translateX(38rem);
-          transform: translateX(38rem);
-}
-
-nav.side li {
-  padding: 1rem;
-}
-
-.landing__top {
+.main-1 {
   width: 100vw;
   height: 100%;
   display: -webkit-box;
@@ -378,11 +356,11 @@ nav.side li {
   z-index: 0;
 }
 
-.home__top {
+.top {
   border-top: 1rem solid var(--color-dark);
 }
 
-.landing__second {
+.main-2 {
   border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
   position: -webkit-sticky;
@@ -391,7 +369,7 @@ nav.side li {
   z-index: 2;
 }
 
-.landing__second div {
+.main-2 div {
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -409,37 +387,33 @@ nav.side li {
   background-color: var(--color-white);
 }
 
-.landing__second div span {
+.main-2 div span {
   margin: .33rem;
+  padding: 1rem;
   border: 0.5rem solid var(--color-dark);
+  display: inline-block;
   font-weight: bold;
   -webkit-transition: all 5s;
   transition: all 5s;
   cursor: no-drop;
 }
 
-.landing__second div span:hover {
+.main-2 div span:hover {
   border-radius: 1rem;
-  -webkit-transition: all var(--speed-fast);
-  transition: all var(--speed-fast);
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
 }
 
-.landing__second div span.passed {
-  padding: 1rem;
-  display: inline-block;
+.main-2 div span.passed {
   background-color: #5f874c;
   color: var(--color-white);
 }
 
-.landing__second div span.wip {
-  padding: 1rem;
-  display: inline-block;
+.main-2 div span.wip {
   background-color: var(--color-yellow);
 }
 
-.landing__second div span.future {
-  padding: 1rem;
-  display: inline-block;
+.main-2 div span.future {
   color: var(--color-dark);
 }
 
@@ -452,7 +426,7 @@ nav.side li {
 .goals ul {
   display: -ms-grid;
   display: grid;
-  grid-gap: 1rem;
+  gap: 1rem;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
 }
@@ -478,122 +452,12 @@ nav.side li {
   background-color: var(--color-yellow);
 }
 
-.goals ul li.reass {
-  background-color: var(--color-blood);
-  color: var(--color-white);
-}
-
-.landing__banner {
+.banner {
   min-width: 33vw;
   padding: 2rem;
-  border-top: 1rem solid var(--color-dar);
-  background: var(--color-blood) url(../../public/images/svg/stacked-waves-haikei.svg) no-repeat center center;
+  background: var(--color-blood) url(../../public/images/svg/stacked-waves-haikei.svg);
   background-size: cover;
   color: var(--color-white);
-}
-
-.landing__banner h1 {
-  margin-bottom: 6rem;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 12rem;
-}
-
-/* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
-.landing-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 1rem;
-  background: var(--color-dark);
-  width: 100%;
-}
-
-.landing-list .school-project {
-  background-color: var(--color-white);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.landing-list .school-project div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: right;
-      -ms-flex-align: right;
-          align-items: right;
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-}
-
-.landing-list h1 {
-  color: #e4e4e4;
-  padding: .25rem 1.5rem 0rem 1.5rem;
-}
-
-.landing-list ul {
-  display: -ms-grid;
-  display: grid;
-  gap: 1rem;
-  mix-blend-mode: lighten;
-}
-
-.landing-list ul h2 {
-  text-align: left;
-}
-
-.landing-list ul li {
-  z-index: 1;
-}
-
-.landing-list ul li a {
-  padding: 2rem;
-  width: 100%;
-  background-color: var(--color-grey);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-decoration: none;
-  -webkit-transition: border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
-  transition: border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
-  transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease;
-  transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
-}
-
-.landing-list ul li a:focus, .landing-list ul li a:hover {
-  border-radius: 1rem 0 0 1rem;
-  -webkit-transform: translateX(1.5em);
-          transform: translateX(1.5em);
-  -webkit-transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
-  transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
-  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s;
-  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
-}
-
-/* Background Images*/
-:root {
-  /* Positioning of list background images */
-  --bg-pos: left / contain no-repeat;
 }
 
 /* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
@@ -1165,6 +1029,80 @@ button.dark-mode-button:active {
   transition: var(--speed-fast);
 }
 
+.link-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: var(--color-dark);
+  width: 100%;
+}
+
+.link-list .school-project {
+  background-color: var(--color-white);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.link-list .school-project div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: right;
+      -ms-flex-align: right;
+          align-items: right;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+}
+
+.link-list ul {
+  display: -ms-grid;
+  display: grid;
+  gap: 1rem;
+}
+
+.link-list ul li a {
+  padding: 2rem;
+  background-color: var(--color-grey);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  -webkit-transition: border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
+  transition: border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
+  transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease;
+  transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
+}
+
+.link-list ul li a:focus, .link-list ul li a:hover {
+  border-radius: 1rem 0 0 1rem;
+  -webkit-transform: translateX(1.5em);
+          transform: translateX(1.5em);
+  -webkit-transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+  transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s;
+  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+}
+
 .tech-icon {
   width: 2.5rem;
   margin-right: 1rem;
@@ -1240,9 +1178,8 @@ button.dark-mode-button:active {
   background-position: center center;
 }
 
-/* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 @media screen and (max-width: 64rem) {
-  .landing__top {
+  .top {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1253,20 +1190,6 @@ button.dark-mode-button:active {
     width: 100%;
     top: -21rem;
   }
-  .streaming__banner {
-    max-width: 100vw;
-  }
-}
-
-@media all and (max-width: 391px) {
-  :root {
-    --base-font-size: 1rem;
-  }
-  main,
-  .blog__cards {
-    top: 0;
-    position: relative;
-  }
   .blog__top {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1274,14 +1197,25 @@ button.dark-mode-button:active {
             flex-direction: column;
     top: -12rem;
   }
-  .landing__top {
+  .streaming__banner {
+    max-width: 100vw;
+  }
+}
+
+@media all and (max-width: 391px) {
+  :root {
+    --base-font-size: 8rem;
+  }
+  main,
+  .blog__cards {
+    top: 0;
+    position: relative;
+  }
+  .top {
     top: -37rem;
   }
-  .landing__second {
+  .main-2 {
     top: 6rem;
-  }
-  footer {
-    top: 0;
   }
 }
 
