--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -1,15 +1,4 @@
-/* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
-
-.blog__banner {
-  min-width: 33vw;
-  // min-height: calc(42vh - 8rem);
-  padding: 2rem;
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
+.banner__blog {
   background: 
     var(--color-yellow) 
     url('../../public/images/svg/blob-scene-haikei.svg')
@@ -21,7 +10,7 @@
       color: var(--color-yellow);
       font-family: $font-dragon;
       font-size: calc(var(--h1) * 2.75);
-      line-height: .9em;
+      line-height: .85em;
 
       mix-blend-mode: exclusion;
       filter: blur(7rem) opacity(0);
@@ -31,11 +20,9 @@
 
     &:hover {
       filter: hue-rotate(calc(350deg));
-      transition: 0s;
-
+      transition: calc(var(--speed-slow) * 5);
       .dragon-text {
         color: var(--color-white);
-        cursor: not-allowed;
         filter: blur(0) opacity(1);
         transition: var(--speed-fast);
         
@@ -46,68 +33,13 @@
     }
 }
 
-.blog-animation {
-  font-family: inherit;
-
-  transition: color 5s;
-
-  &:focus,
-  &:hover {
-    cursor: crosshair; /* For fun */
-    color: var(--color-dark);
-
-    transition: all var(--speed-fast);
-  }
-}
-
-/* THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS */
-
 .blog__cards {
-  background-color: var(--color-dark);
-  border-top: 1rem solid var(--color-dark);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
   position: sticky;
   top: 7rem;
   z-index: 1;
-
-  aside {
-    width: 100%;
-  }
-}
-
-/* ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE */
-
-aside {
-  padding: 2rem;
-
-  background-color: var(--color-white);
-}
-
-/* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
-
-@media screen and (min-width: 64rem) {
-
-  header {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-  }
-
-  main {
-    grid-column: span 2;
-
-    grid-template-columns: 38.2% 1fr; /* 38.2% = Golden Ratio */
-  }
-
-  .blog__banner {
-    border-bottom: none;
-    grid-column: 1 / 2;
-    grid-row: 1 / 5;
-
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-align: left;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  
+  background-color: var(--color-dark);
 }
