--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -109,7 +109,7 @@
   background-position: center;
 
   h2 {
-    color: var(--color-white);
+    color: var(--color-staticwhite);
     text-align: left;
 
     max-width: 30rem;
